# dummy-libtorch

./: .gitignore  CMakeLists.txt  README.md  build.sh  download_libtorch.sh  model.cpp
python/: dummy_model.py  test.pt
